[gd_scene load_steps=6 format=2]

[ext_resource path="res://kingthings-lickorishe/Kingthings Lickorishe.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GFX/Pictures/title4.jpeg" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 5
outline_color = Color( 0.839216, 0.619608, 0.619608, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0.839216, 0.619608, 0.619608, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 219.0
margin_right = 805.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 586.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "Janitor 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 586.0
margin_bottom = 454.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 388.0
margin_bottom = 172.0

[node name="BtnStart" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 191.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="BtnExplain" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 191.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "How to play"

[node name="BtnCredits" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 191.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="BtnQuit" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 191.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BtnExplain" to="." method="_on_BtnExplain_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
